--- a/HTML5/01. Basic Tags/01. Basic Tags.html
+++ b/HTML5/01. Basic Tags/01. Basic Tags.html
@@ -4,26 +4,75 @@
 2. <!-- Defines the document type -->
   <!DOCTYPE>
 
-<!-- Defines an HTML Document -->
+3. <!-- Defines an HTML Document -->
+    <html>...........</html>
+    <!DOCTYPE html>
+    <html>
 
-<!-- Contains metadata information for the document -->
+    </html>
 
-<!-- Defines a title for the document -->
+4. <!-- Contains metadata information for the document -->
+    <head>
+     <!-- <meta name="description" content="HTML 5">
+     <meta name="author" content="Heman">
+     <meta name="viewport" content="width=device-width, initial=1.0" >
+     <meta charset="utf-8"> -->
+    </head>
 
-<!-- Defines the documents body -->
+5. <!-- Defines a title for the document -->
+    <title>basic</title>
 
-<!-- Defines HTML Headings -->
+6. <!-- Defines the documents body -->
+    <!-- <body>
+      <h1>Heading 1</h1>
+      <h2>Heading 2</h2>
+      <h3>Heading 3</h3>
+      <h4>heading 4</h4>
+      <h5>Heading 5</h5>
+      <h6>Heading 6</h6>
+      <br>
+      <p>Ayyo this is a Paragraph</p>
+      <hr>
+      <a href="https://www.google.com">google</a>
+      <a href="https://www.google.com" target="_blank">New</a>
+      <a href="https://www.google.com" target="_parent">Parent</a>
+      <a href="https://www.google.com" target="_self">Self</a>
+      <a href="https://www.google.com" target="_top">Top</a>
 
-<!-- Defines a Paragraph -->
+    </body> -->
 
-<!-- Inserts a single line break -->
+7. <!-- Defines HTML Headings -->
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
 
-<!-- Defines a thematic change in the content -->
+8. <!-- Defines a Paragraph -->
+    <p>Ayyo this is a Paragraph</p>
 
-<!-- Defines a hyperlink -->
+9. <!-- Inserts a single line break -->
+    <br>
 
-<!-- Defines the relationship between a document and an external resource (mostly used to link to a style sheet) -->
+10. <!-- Defines a thematic change in the content -->
+    <hr>
 
-<!-- Defines metadata about an HTML Document -->
+11. <!-- Defines a hyperlink -->
+    <a href="https://www.google.com" target="_blank"></a>
+    <a href="https://www.google.com" target="_parent"></a>
+    <a href="https://www.google.com" target="_self"></a>
+    <a href="https://www.google.com" target="_top"></a>
 
-<!-- Defines style information for a document -->
+12. <!-- Defines the relationship between a document and an external resource (mostly used to link to a style sheet) -->
+    <link rel="stylesheet" type="text/css" href="/css/master.css">
+
+13. <!-- Defines metadata about an HTML Document -->
+    <meta name="description" content="HTML 5">
+    <meta name="author" content="Heman">
+    <meta name="viewport" content="width=device-width, initial=1.0" >
+    <meta charset="utf-8">
+14. <!-- Defines style information for a document -->
+    <style media="screen">
+
+    </style>
